--- a/PListSerializer.Core.Tests/PListSerializer.Core.Tests.csproj
+++ b/PListSerializer.Core.Tests/PListSerializer.Core.Tests.csproj
@@ -9,6 +9,7 @@
     <FileVersion>1.0.0.0</FileVersion>
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
@@ -24,7 +25,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="PListNet.Quark" Version="3.4.2" />
+    <PackageReference Include="PListNet.Quark" Version="3.4.3" />
   </ItemGroup>
   <ItemGroup>
     <None Update="Resources\PList1.plist">
@@ -46,4 +47,8 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+
+  <ItemGroup>
+    <Using Include="NUnit.Framework" />
+    </ItemGroup>
 </Project>
