--- a/PListSerializer.Core.Tests/PListSerializer.Core.Tests.csproj
+++ b/PListSerializer.Core.Tests/PListSerializer.Core.Tests.csproj
@@ -1,55 +1,40 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <AssemblyTitle>PListSerializer.Core.Tests</AssemblyTitle>
-    <Product>PListSerializer.Core.Tests</Product>
-    <Copyright>Copyright ©  2019</Copyright>
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>1.0.0.0</FileVersion>
-    <IsPackable>false</IsPackable>
-    <IsTestProject>true</IsTestProject>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net10.0</TargetFramework>
+        <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+        <AssemblyTitle>PListSerializer.Core.Tests</AssemblyTitle>
+        <Product>PListSerializer.Core.Tests</Product>
+        <Copyright>Copyright ©  2019</Copyright>
+        <AssemblyVersion>1.0.0.0</AssemblyVersion>
+        <FileVersion>1.0.0.0</FileVersion>
+        <IsPackable>false</IsPackable>
+        <IsTestProject>true</IsTestProject>
+        <ImplicitUsings>enable</ImplicitUsings>
 
-  <ItemGroup>
-    <ProjectReference Include="..\PListSerializer.Core\PListSerializer.Core.csproj" />
-  </ItemGroup>
+        <!-- Enable Microsoft Testing Platform support for xUnit -->
+        <TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
+        <UseMicrosoftTestingPlatformRunner>true</UseMicrosoftTestingPlatformRunner>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
-    <PackageReference Include="MSTest.TestAdapter" Version="3.6.1" />
-    <PackageReference Include="MSTest.TestFramework" Version="3.6.1" />
-    <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
-    <PackageReference Include="NUnit" Version="4.2.2" />
-    <PackageReference Include="NUnit.Analyzers" Version="4.3.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="PListNet.Quark" Version="3.4.4" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Update="Resources\PList1.plist">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="Resources\Plist2.plist">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="Resources\Plist3.plist">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="Resources\PList4.plist">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="Resources\PList5.plist">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="Resources\PList6.plist">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\PListSerializer.Core\PListSerializer.Core.csproj" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <Using Include="NUnit.Framework" />
+    <ItemGroup>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
+        <PackageReference Include="PListNet.Quark" Version="3.4.4" />
+        <PackageReference Include="xunit.v3" Version="3.2.1" />
+    </ItemGroup>
+    <ItemGroup>
+        <None Update="Resources\PList1.plist" CopyToOutputDirectory="PreserveNewest" />
+        <None Update="Resources\Plist2.plist" CopyToOutputDirectory="PreserveNewest" />
+        <None Update="Resources\Plist3.plist" CopyToOutputDirectory="PreserveNewest" />
+        <None Update="Resources\PList4.plist" CopyToOutputDirectory="PreserveNewest" />
+        <None Update="Resources\PList5.plist" CopyToOutputDirectory="PreserveNewest" />
+        <None Update="Resources\PList6.plist" CopyToOutputDirectory="PreserveNewest" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <Using Include="Xunit" />
     </ItemGroup>
 </Project>
